@@ -1,0 +1,3 @@
+module EveryDayIrb
+  VERSION = "2.0.0"
+end
